RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Metric__e/AI_Processing_Metric__e.object-meta.xml
<CustomObject>
    <description>Platform event for publishing real-time AI processing metrics including retry attempts</description>
    <label>AI Processing Metric</label>
    <pluralLabel>AI Processing Metrics</pluralLabel>
</CustomObject>