RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Metric__e/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <description>ID of the processing batch</description>
    <label>Batch ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>