RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Metric__e/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>ID of the case being processed</description>
    <label>Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>