RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Metric__e/fields/Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Ms__c</fullName>
    <description>Processing time in milliseconds</description>
    <label>Processing Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>