RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Metric__e/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>AI provider name</description>
    <label>Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>