RouteLogic-v4.0.0/force-app/main/default/objects/AI_Processing_Metric__e/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <description>Status of the request (Success, Failed, Retry)</description>
    <label>Request Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>